Added index.html tags for building code

--- a/index.html
+++ b/index.html
@@ -15,6 +15,81 @@
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <header class="header">
+        <h1 class="title header__title">natalie laursen</h1>
+        <nav>
+            <ul class="header__nav">
+                <li><a class="header__list" href="index.html">Home</a></li>
+                <li><a class="header__list" href="index.html">About</a></li>
+                <li><a class="header__list" href="index.html">Marathone</a></li>
+                <li><a class="header__list" href="index.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section class="section">
+        <main class="main-content">
+            <h1 class="title main-content__title">the health benefits of bananas</h1>
+            <p  class="text main-content__text">Last update at 01-07-2020 12:32PM</p>
+            <img src="./assets/first.png" alt="Banana">
+            <p class="text text-first">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Do eiusmod tempo.
+            </p>
+            <p class="text text-second">
+                Incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.
+            </p>
+            <p class="text text-third ">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+            </p>
+            <p class="text text-fourth">
+                Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+            </p>
+            <p class="text text-fifth">
+                Do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+            </p>
+        </main>
+        <aside class="aside">
+            <div>
+                <h3 class="title aside__title">categories</h3>
+                <ul class="aside__nav">
+                    <li><a class="aside__list" href="index.html">All (106)</a></li>
+                    <li><a class="aside__list" href="index.html">Receipts (32)</a></li>
+                    <li><a class="aside__list" href="index.html">Travelings (4)</a></li>
+                    <li><a class="aside__list" href="index.html">Health (14)</a></li>
+                    <li><a class="aside__list" href="index.html">Yoga (5)</a></li>
+                </ul>
+            </div>
+            <div>
+                <h3 class="title aside__title-second">folow me in instagram</h3>
+                <div class="aside__images">
+                    <img src="./assets/second.png" alt="Fruits">
+                    <img src="./assets/third.png" alt="Girl in sunset">
+                    <img src="./assets/fourth.png" alt="Paint hand">
+                    <img src="./assets/fifth.png" alt="Apples">
+                </div>
+            </div>
+        </aside>
+        <div class="comment-part">
+            <h3 class="title commet-part__title">leave a comment</h3>
+            <input type="text" placeholder="Your name">
+            <input type="text" placeholder="Your Email">
+            <textarea name="" id="" cols="30" rows="10">You seemed to read my mind. However, in the second paragraph I do not agree with the last sentence.
+            </textarea>
+            <button class="btn">Send</button>
+        </div>
+    </section>
+    <footer class="footer">
+        <section class="section footer__section">
+            <img class="footer__img" src="./assets/Rectangle 36.png" alt="Profile photo">
+        <h3 class="title footer__title">Natalie Laursen</h3>
+        <img src="./assets/Vector (10).png" alt="Facebook icon">
+        <img src="./assets/Vector (11).png" alt="Instagram icon">
+        <img src="./assets/Vector (12).png" alt="YouTube icon">
+        <img src="./assets/Vector (13).png" alt="Twittwr icon">
+        <img src="./assets/Vector (14).png" alt="Pinteres icon">
+        </section>
+        <section class="section footer__section">
+            <p>Antonova Polina 2020. All rights reserved. </p>
+        </section>
+    </footer>
 </body>
 </html>
