index.html modified

--- a/index.html
+++ b/index.html
@@ -81,11 +81,13 @@
         <section class="section footer__section">
             <img class="footer__img" src="./assets/Rectangle 36.png" alt="Profile photo">
         <h3 class="title footer__title">Natalie Laursen</h3>
-        <img src="./assets/Vector (10).png" alt="Facebook icon">
-        <img src="./assets/Vector (11).png" alt="Instagram icon">
-        <img src="./assets/Vector (12).png" alt="YouTube icon">
-        <img src="./assets/Vector (13).png" alt="Twittwr icon">
-        <img src="./assets/Vector (14).png" alt="Pinteres icon">
+        <div class="footer__content">
+            <img src="./assets/Vector (10).png" alt="Facebook icon">
+            <img src="./assets/Vector (11).png" alt="Instagram icon">
+            <img src="./assets/Vector (12).png" alt="YouTube icon">
+            <img src="./assets/Vector (13).png" alt="Twittwr icon">
+            <img src="./assets/Vector (14).png" alt="Pinteres icon">
+        </div>
         </section>
         <section class="section footer__section">
             <p>Antonova Polina 2020. All rights reserved. </p>
